[project]
name = "mysticML"
version = "0.5.7"
authors = [
  { name="Shiladitya Sarkar", email="writetoshiladitya@gmail.com" },
  { name="Swastik Banerjee", email="swastikbanerjee2001@gmail.com" },
  { name="Bammidi Abhinav", email="bammidiabhinav@gmail.com" },
]
description = "Automating the Machine Learning pipeline"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas~=2.1.4",
    "scipy~=1.11.4",
    "numpy~=1.26.3",
    "scikit-learn~=1.3.2",
]

[project.urls]
Homepage = "https://github.com/shiladityasarkar/mysticML"
Issues = "https://github.com/shiladityasarkar/mysticML/issues"

[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"
